--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.1",
         "tailwindcss": "^3.0.0"
+    },
+    "dependencies": {
+        "@alpinejs/intersect": "^3.9.0"
     }
 }
